--- a/src/scss/components/navigation.scss
+++ b/src/scss/components/navigation.scss
@@ -73,13 +73,17 @@
     display: none;
   }
 
+  #nav-logo {
+    display: none;
+  }
+
   @include mq(large) {
     position: relative;
     right: 0;
     top: 0;
     width: 100%;
     height: 5rem;
-    transform: none;
+    transform: translateX(0);
     transition: none;
     @include flex(1rem, row, space-around, center);
     .close-icon {
@@ -87,10 +91,19 @@
     }
 
     .nav-content {
-      @include flex(1rem, row, space-around, center);
+      @include flex(1rem, row, space-between, center);
+      padding-inline: 5rem;
       width: 100%;
       position: relative;
       top: 0rem;
+    }
+
+    .nav-content-links {
+      @include flex(1rem, row, flex-start, center);
+    }
+
+    #nav-logo {
+      display: block;
     }
 
     .nav-links {
@@ -100,6 +113,7 @@
         color: hsl(0, 0%, 8%);
         cursor: pointer;
       }
+      position: relative;
     }
 
     .dropdown-arrow {
@@ -151,11 +165,11 @@
     }
     .features-sublist {
       top: 3rem;
-      left: 16rem;
+      left: -2rem;
     }
     .company-sublist {
       top: 3rem;
-      left: 29rem;
+      left: 11rem;
     }
   }
 }
